Added a fallback node label based on the node path for cmdi tree nodes that have no name field provided.