@@ -43,15 +43,15 @@ import nl.mpi.arbil.MetadataFile.MetadataUtils;
 
 /**
  * Document   : ImdiTreeObject
- * Created on : 
+ * Created on :
  * @author Peter.Withers@mpi.nl
  */
 public class ImdiTreeObject implements Comparable {
 
     public MetadataUtils metadataUtils;
     public ArbilTemplate nodeTemplate;
-//    static ImdiIcons imdiIcons = new ImdiIcons();
-//    private static Vector listDiscardedOfAttributes = new Vector(); // a list of all unused imdi attributes, only used for testing
+    //    static ImdiIcons imdiIcons = new ImdiIcons();
+    //    private static Vector listDiscardedOfAttributes = new Vector(); // a list of all unused imdi attributes, only used for testing
     private boolean debugOn = false;
     private Hashtable<String, ImdiField[]> fieldHashtable; //// TODO: this should be changed to a vector or contain an array so that duplicate named fields can be stored ////
     private ImdiTreeObject[] childArray = new ImdiTreeObject[0];
@@ -67,7 +67,7 @@ public class ImdiTreeObject implements Comparable {
     public boolean isInfoLink = false;
     private boolean needsSaveToDisk;
     private String nodeText, lastNodeText = "loading imdi...";
-//    private boolean nodeTextChanged = false;
+    //    private boolean nodeTextChanged = false;
     private URI nodeUri;
     public ImdiField resourceUrlField;
     public CmdiComponentLinkReader cmdiComponentLinkReader = null;
@@ -82,23 +82,23 @@ public class ImdiTreeObject implements Comparable {
     final private Object loadingCountLock = new Object();
     @Deprecated
     public boolean lockedByLoadingThread = false;
-//    private boolean isFavourite;
+    //    private boolean isFavourite;
     public String archiveHandle = null;
     public boolean hasDomIdAttribute = false; // used to requre a save (that will remove the dom ids) if a node has any residual dom id attributes
-//    public boolean autoLoadChildNodes = false;
+    //    public boolean autoLoadChildNodes = false;
     //public Vector<String[]> addQueue;
     public boolean scrollToRequested = false;
-//    public Vector<ImdiTreeObject> mergeQueue;
-//    public boolean jumpToRequested = false; // dubious about this being here but it seems to fit here best
+    //    public Vector<ImdiTreeObject> mergeQueue;
+    //    public boolean jumpToRequested = false; // dubious about this being here but it seems to fit here best
     private ImdiTreeObject domParentImdi = null; // the parent imdi containing the dom, only set for imdi child nodes
     //public String xmlNodeId = null; // only set for imdi child nodes and is the xml node id relating to this imdi tree object
     public File thumbnailFile = null;
     private final Object domLockObjectPrivate = new Object();
 
     protected ImdiTreeObject(URI localUri) {
-//        System.out.println("ImdiTreeObject: " + localUri);
+        //        System.out.println("ImdiTreeObject: " + localUri);
         containersOfThisNode = new Vector<Component>();
-//        addQueue = new Vector<String[]>();
+        //        addQueue = new Vector<String[]>();
         nodeUri = localUri;
         if (nodeUri != null) {
             metadataUtils = ImdiTreeObject.getMetadataUtils(nodeUri.toString());
@@ -119,7 +119,7 @@ public class ImdiTreeObject implements Comparable {
         String encodedString = null;
         try {
             for (String inputStringPart : inputPath.split("/")) {
-//                    System.out.println("inputStringPart: " + inputStringPart);
+                //                    System.out.println("inputStringPart: " + inputStringPart);
                 if (encodedString == null) {
                     encodedString = URLEncoder.encode(inputStringPart, "UTF-8");
                 } else {
@@ -133,29 +133,29 @@ public class ImdiTreeObject implements Comparable {
     }
 
     static public URI conformStringToUrl(String inputUrlString) {
-//        System.out.println("conformStringToUrl: " + inputUrlString);
+        //        System.out.println("conformStringToUrl: " + inputUrlString);
         URI returnUrl = null;
         try {
-//            localUrlString = localUrlString.replace("\\", "/");
+            //            localUrlString = localUrlString.replace("\\", "/");
             if (!inputUrlString.toLowerCase().startsWith("http") && !inputUrlString.toLowerCase().startsWith("file:") && !inputUrlString.toLowerCase().startsWith(".")) {
                 returnUrl = new File(inputUrlString).toURI();
             } else {
                 // apache method
-//                URI tempURI = new URI(inputUrlString);
-//                URI returnURI = URIUtils.createURI(tempURI.getScheme(), tempURI.getHost(), tempURI.getPort(), tempURI.getPath(), tempURI.getQuery(), tempURI.getFragment());
-//                return returnURI;
+                //                URI tempURI = new URI(inputUrlString);
+                //                URI returnURI = URIUtils.createURI(tempURI.getScheme(), tempURI.getHost(), tempURI.getPort(), tempURI.getPath(), tempURI.getQuery(), tempURI.getFragment());
+                //                return returnURI;
                 // end apache method : this requires the uri to be broken into its parts so we might as well do it with the standard classes
                 // mpi method
-//                URI returnURI = URIUtil.newURI(inputUrlString);
+                //                URI returnURI = URIUtil.newURI(inputUrlString);
                 // end mpi method : this will url encode the # etc. and therefore loose the fragment and other parts
-//                boolean isUncPath = inputUrlString.toLowerCase().startsWith("file:////");
-//                if (isUncPath) {
-//                    try {
-//                        returnURI = new URI("file:////" + returnURI.toString().substring("file:/".length()));
-//                    } catch (URISyntaxException urise) {
-//                        GuiHelper.linorgBugCatcher.logError(urise);
-//                    }
-//                }
+                //                boolean isUncPath = inputUrlString.toLowerCase().startsWith("file:////");
+                //                if (isUncPath) {
+                //                    try {
+                //                        returnURI = new URI("file:////" + returnURI.toString().substring("file:/".length()));
+                //                    } catch (URISyntaxException urise) {
+                //                        GuiHelper.linorgBugCatcher.logError(urise);
+                //                    }
+                //                }
 
                 // separate the path and protocol
                 int protocolEndIndex;
@@ -165,9 +165,9 @@ public class ImdiTreeObject implements Comparable {
                 } else {
                     protocolEndIndex = inputUrlString.indexOf(":/");
                 }
-//                while (inputUrlString.charAt(protocolEndIndex) == '/') {
-//                    protocolEndIndex++;
-//                }
+                //                while (inputUrlString.charAt(protocolEndIndex) == '/') {
+                //                    protocolEndIndex++;
+                //                }
                 String protocolComponent = inputUrlString.substring(0, protocolEndIndex);
                 String remainingComponents = inputUrlString.substring(protocolEndIndex + 1);
                 String[] pathComponentArray = remainingComponents.split("#");
@@ -179,28 +179,28 @@ public class ImdiTreeObject implements Comparable {
                 // note that this must be done as separate parameters not a single string otherwise it will not get url encoded
                 // TODO: this could require the other url components to be added here
                 returnUrl = new URI(protocolComponent, pathComponent, fragmentComponent);
-//                System.out.println("returnUrl: " + returnUrl);
-////                int protocolEndIndex = inputUrlString.lastIndexOf("/", "xxxx:".length());
+                //                System.out.println("returnUrl: " + returnUrl);
+                ////                int protocolEndIndex = inputUrlString.lastIndexOf("/", "xxxx:".length());
 
-//                String pathComponentEncoded = URLEncoder.encode(pathComponent, "UTF-8");
-//                returnUrl = new URI(protocolComponent + pathComponentEncoded);
-//                System.out.println("returnUrl: " + returnUrl);
+                //                String pathComponentEncoded = URLEncoder.encode(pathComponent, "UTF-8");
+                //                returnUrl = new URI(protocolComponent + pathComponentEncoded);
+                //                System.out.println("returnUrl: " + returnUrl);
             }
-//            // if the imdi api finds only one / after the file: it will interpret the url as relative and make a bit of a mess of it, so we have to make sure that we have two for the url and one for the root
-//            if (returnUrl.toString().toLowerCase().startsWith("file:") && !returnUrl.toString().toLowerCase().startsWith("file:///")) {
-//                // here we assume that this application does not use relative file paths
-//                returnUrl = new URL("file", "", "//" + returnUrl.getPath());
-//            }
-//            System.out.println("conformStringToUrl URI: " + new URI(returnUrl.toString()));
+            //            // if the imdi api finds only one / after the file: it will interpret the url as relative and make a bit of a mess of it, so we have to make sure that we have two for the url and one for the root
+            //            if (returnUrl.toString().toLowerCase().startsWith("file:") && !returnUrl.toString().toLowerCase().startsWith("file:///")) {
+            //                // here we assume that this application does not use relative file paths
+            //                returnUrl = new URL("file", "", "//" + returnUrl.getPath());
+            //            }
+            //            System.out.println("conformStringToUrl URI: " + new URI(returnUrl.toString()));
         } catch (Exception ex) {
             GuiHelper.linorgBugCatcher.logError(ex);
         }
-//        System.out.println("conformStringToUrl out: " + returnUrl.toString());
+        //        System.out.println("conformStringToUrl out: " + returnUrl.toString());
         return normaliseURI(returnUrl);
     }
 
     static public URI normaliseURI(URI inputURI) {
-//        System.out.println("normaliseURI: " + inputURI);
+        //        System.out.println("normaliseURI: " + inputURI);
         boolean isUncPath = inputURI.toString().toLowerCase().startsWith("file:////");
         URI returnURI = inputURI.normalize();
         if (isUncPath) {
@@ -227,8 +227,8 @@ public class ImdiTreeObject implements Comparable {
     }
 
     static public boolean isPathHistoryFile(String urlString) {
-//        System.out.println("isStringImdiHistoryFile" + urlString);
-//        System.out.println("isStringImdiHistoryFile" + urlString.replaceAll(".imdi.[0-9]*$", ".imdi"));
+        //        System.out.println("isStringImdiHistoryFile" + urlString);
+        //        System.out.println("isStringImdiHistoryFile" + urlString.replaceAll(".imdi.[0-9]*$", ".imdi"));
         return isPathMetadata(urlString.replaceAll("mdi.[0-9]*$", "mdi"));
     }
 
@@ -328,7 +328,7 @@ public class ImdiTreeObject implements Comparable {
         if (!isMetaDataNode() && isLocal() && mpiMimeType != null) {
             // add the mime type for loose files
             ImdiField mimeTypeField = new ImdiField(fieldHashtable.size(), this, "Format", this.mpiMimeType, 0);
-//            mimeTypeField.fieldID = "x" + fieldHashtable.size();
+            //            mimeTypeField.fieldID = "x" + fieldHashtable.size();
             addField(mimeTypeField);
         }
     }
@@ -342,15 +342,15 @@ public class ImdiTreeObject implements Comparable {
                 }
             }
         }
-//        if (currentTemplate == null) {
-//            // this will be overwritten when the imdi file is read, provided that a template is specified in the imdi file
-//            if (isPathCmdi(nodeUri.getPath())) {
-//                // this must be loaded with the name space uri
-//                //   currentTemplate = ArbilTemplateManager.getSingleInstance().getCmdiTemplate();
-//            } else {
-//                currentTemplate = ArbilTemplateManager.getSingleInstance().getCurrentTemplate();
-//            }
-//        }
+        //        if (currentTemplate == null) {
+        //            // this will be overwritten when the imdi file is read, provided that a template is specified in the imdi file
+        //            if (isPathCmdi(nodeUri.getPath())) {
+        //                // this must be loaded with the name space uri
+        //                //   currentTemplate = ArbilTemplateManager.getSingleInstance().getCmdiTemplate();
+        //            } else {
+        //                currentTemplate = ArbilTemplateManager.getSingleInstance().getCurrentTemplate();
+        //            }
+        //        }
         fieldHashtable = new Hashtable<String, ImdiField[]>();
         imdiDataLoaded = false;
         hashString = null;
@@ -360,13 +360,13 @@ public class ImdiTreeObject implements Comparable {
         matchesLocalFileSystem = 0;
         fileNotFound = false;
         needsSaveToDisk = false;
-//    nodeText = null;
-//    urlString = null;
-//        resourceUrlField = null;
+        //    nodeText = null;
+        //    urlString = null;
+        //        resourceUrlField = null;
         isDirectory = false;
         icon = null;
         nodeEnabled = true;
-//        isLoadingCount = true;
+        //        isLoadingCount = true;
         if (nodeUri != null) {
             if (!isMetaDataNode() && isLocal()) {
                 File fileObject = getFile();
@@ -374,10 +374,10 @@ public class ImdiTreeObject implements Comparable {
                     this.nodeText = fileObject.getName();
                     this.isDirectory = fileObject.isDirectory();
                     // TODO: check this on a windows box with a network drive and linux with symlinks
-//                    this.isDirectory = !fileObject.isFile();
-//                    System.out.println("isFile" + fileObject.isFile());
-//                    System.out.println("isDirectory" + fileObject.isDirectory());
-//                    System.out.println("getAbsolutePath" + fileObject.getAbsolutePath());
+                    //                    this.isDirectory = !fileObject.isFile();
+                    //                    System.out.println("isFile" + fileObject.isFile());
+                    //                    System.out.println("isDirectory" + fileObject.isDirectory());
+                    //                    System.out.println("getAbsolutePath" + fileObject.getAbsolutePath());
                 }
             }
             if (!isMetaDataNode() && nodeText == null) {
@@ -389,19 +389,19 @@ public class ImdiTreeObject implements Comparable {
     public void reloadNode() {
         System.out.println("reloadNode: " + isLoading());
         getParentDomNode().needsSaveToDisk = false; // clear any changes
-//        if (!this.isImdi()) {
-//            initNodeVariables();
-//            //loadChildNodes();
-//            clearIcon();
-//            // TODO: this could just remove the decendant nodes and let the user re open them
-//            TreeHelper.getSingleInstance().updateTreeNodeChildren(this);
-////            this.clearIcon();
-//        } else {
-////            if (getParentDomNode().isCorpus()) {
-////                getParentDomNode().autoLoadChildNodes = true;
-////            }
+        //        if (!this.isImdi()) {
+        //            initNodeVariables();
+        //            //loadChildNodes();
+        //            clearIcon();
+        //            // TODO: this could just remove the decendant nodes and let the user re open them
+        //            TreeHelper.getSingleInstance().updateTreeNodeChildren(this);
+        ////            this.clearIcon();
+        //        } else {
+        ////            if (getParentDomNode().isCorpus()) {
+        ////                getParentDomNode().autoLoadChildNodes = true;
+        ////            }
         ImdiLoader.getSingleInstance().requestReload(getParentDomNode());
-//        }
+        //        }
     }
 
     public void loadImdiDom() {
@@ -410,7 +410,7 @@ public class ImdiTreeObject implements Comparable {
             getParentDomNode().loadImdiDom();
         } else {
             synchronized (getParentDomLockObject()) {
-                initNodeVariables(); // this might be run too often here but it must be done in the loading thread and it also must be done when the object is created                
+                initNodeVariables(); // this might be run too often here but it must be done in the loading thread and it also must be done when the object is created
                 if (!isMetaDataNode() && !isDirectory() && isLocal()) {
                     // if it is an not imdi or a loose file but not a direcotry then get the md5sum
                     MimeHashQueue.getSingleInstance().addToQueue(this);
@@ -419,12 +419,12 @@ public class ImdiTreeObject implements Comparable {
                 if (this.isDirectory()) {
                     getDirectoryLinks();
                     imdiDataLoaded = true;
-//            clearIcon();
+                    //            clearIcon();
                 }
                 if (isMetaDataNode()) {
                     Document nodDom = null;
                     // cacheLocation will be null if useCache = false hence no file has been saved
-//        String cacheLocation = null;
+                    //        String cacheLocation = null;
                     if (this.isLocal() && !this.getFile().exists() && new File(this.getFile().getAbsolutePath() + ".0").exists()) {
                         // if the file is missing then try to find a valid history file
                         copyLastHistoryToCurrent();
@@ -434,7 +434,7 @@ public class ImdiTreeObject implements Comparable {
                         //System.out.println("tempUrlString: " + tempUrlString);
                         nodDom = new CmdiComponentBuilder().getDocument(this.getURI());
                         // only read the fields into imdi tree objects if it is not going to be saved to the cache
-//            if (!useCache) {
+                        //            if (!useCache) {
                         if (nodDom == null) {
                             File nodeFile = this.getFile();
                             if (nodeFile != null && nodeFile.exists()) {
@@ -462,7 +462,7 @@ public class ImdiTreeObject implements Comparable {
                             childLinks = childLinksTemp.toArray(new String[][]{});
                             //ImdiTreeObject[] childArrayTemp = new ImdiTreeObject[childLinks.length];
                             for (ImdiTreeObject currentNode : parentChildTree.keySet()) {
-//                        System.out.println("setting childArray on: " + currentNode.getUrlString());
+                                //                        System.out.println("setting childArray on: " + currentNode.getUrlString());
                                 // save the old child array
                                 ImdiTreeObject[] oldChildArray = currentNode.childArray;
                                 // set the new child array
@@ -490,39 +490,39 @@ public class ImdiTreeObject implements Comparable {
                                 }
                             }
                         }
-//            }
+                        //            }
                         // save this to the cache before deleting the dom
-//            if (useCache) {
-//                // get the links from the imdi before we dispose of the dom
-//                getImdiLinks(nodDom);
-////                cacheLocation = saveNodeToCache(nodDom);
-//            }
+                        //            if (useCache) {
+                        //                // get the links from the imdi before we dispose of the dom
+                        //                getImdiLinks(nodDom);
+                        ////                cacheLocation = saveNodeToCache(nodDom);
+                        //            }
                     } catch (Exception mue) {
                         GuiHelper.linorgBugCatcher.logError(this.getUrlString(), mue);
-//            System.out.println("Invalid input URL: " + mue);
+                        //            System.out.println("Invalid input URL: " + mue);
                     }
                     //we are now done with the dom so free the memory
                     nodDom = null;
-//        return cacheLocation;
+                    //        return cacheLocation;
                     imdiDataLoaded = true;
-//            clearChildIcons();
+                    //            clearChildIcons();
                 }
             }
         }
     }
 
-//        private String getField(String fieldName) {
-//            Document itemDom = this.getNodeDom();
-//            if (itemDom == null) {
-//                return null;
-//            }
-//            IMDIElement rowValue = api.getIMDIElement(itemDom, fieldName);
-//            if (rowValue != null) {
-//                return rowValue.getValue();
-//            } else {
-//                return null;
-//            }
-//        }
+    //        private String getField(String fieldName) {
+    //            Document itemDom = this.getNodeDom();
+    //            if (itemDom == null) {
+    //                return null;
+    //            }
+    //            IMDIElement rowValue = api.getIMDIElement(itemDom, fieldName);
+    //            if (rowValue != null) {
+    //                return rowValue.getValue();
+    //            } else {
+    //                return null;
+    //            }
+    //        }
     private void getDirectoryLinks() {
         File[] dirLinkArray = null;
         File nodeFile = this.getFile();
@@ -531,8 +531,8 @@ public class ImdiTreeObject implements Comparable {
             Vector<ImdiTreeObject> childLinksTemp = new Vector<ImdiTreeObject>();
             for (int linkCount = 0; linkCount < dirLinkArray.length; linkCount++) {
                 try {
-//                    System.out.println("nodeFile: " + nodeFile);
-//                    System.out.println("dirLinkArray[linkCount]: " + dirLinkArray[linkCount]);
+                    //                    System.out.println("nodeFile: " + nodeFile);
+                    //                    System.out.println("dirLinkArray[linkCount]: " + dirLinkArray[linkCount]);
                     URI childURI = dirLinkArray[linkCount].toURI();
                     ImdiTreeObject currentImdi = ImdiLoader.getSingleInstance().getImdiObjectWithoutLoading(childURI);
                     if (TreeHelper.getSingleInstance().showHiddenFilesInTree || !currentImdi.getFile().isHidden()) {
@@ -548,76 +548,76 @@ public class ImdiTreeObject implements Comparable {
         }
     }
 
-//    private void getImdiLinks(Document nodDom) {
-//        try {
-//            if (nodDom != null) {
-//                OurURL baseURL = new OurURL(nodeUri.toURL());
-////                debugOut("getIMDILinks");
-//                IMDILink[] links = api.getIMDILinks(nodDom, baseURL, WSNodeType.CORPUS);
-////                debugOut("links.length: " + links.length);
-//                if (links != null) {
-//                    for (int linkCount = 0; linkCount < links.length; linkCount++) {
-//                        childLinks.add(new String[]{links[linkCount].getRawURL().toString(), null});
-//                    }
-//                }
-//            }
-//        } catch (MalformedURLException mue) {
-//            System.out.println("Error getting links: " + mue);
-//        }
-//    }
-//        private boolean populateChildFields(String fieldNameString, boolean alwaysShow) {
-//            // this is called when loading children and when loading fields
-//            //System.out.println("fieldNameString: " + fieldNameString);
-//            boolean valueFound = false;
-//            int counterFieldPosition = fieldNameString.indexOf("(X)");
-//            if (-1 < counterFieldPosition) {
-//                int itemValueCounter = 1;
-//                valueFound = true;
-//                String firstHalf = fieldNameString.substring(0, counterFieldPosition + 1);
-//                String secondHalf = fieldNameString.substring(counterFieldPosition + 2);
-//                while (valueFound) {
-//                    fieldNameString = firstHalf + itemValueCounter + secondHalf;
-//                    if (-1 < fieldNameString.indexOf("(X)")) {
-//                        valueFound = populateChildFields(fieldNameString, alwaysShow);
-//                    } else {
-//                        boolean isWrongFieldType = false;
-//                        if (isImdi()) {
-//                            if (isSession() && fieldNameString.startsWith("Corpus.")) {
-//                                // TODO: we could speed things up by not asking the imdi.api for the value of this field, however if there is data so show (presumably erroneous data) it should still be shown
-//                                isWrongFieldType = true;
-//                            } else if (fieldNameString.startsWith("Session.")) {
-//                                isWrongFieldType = true;
-//                            }
-//                        }
-//                        //System.out.println("checking x value for: " + fieldNameString);
-//                        String cellValue = this.getField(fieldNameString);
-//                        valueFound = cellValue != null;
-//                        if (valueFound && cellValue.length() > 0) {
-//                            this.addField(fieldNameString, 0, cellValue);
-//                        } else if (alwaysShow) {
-//                            if (!isWrongFieldType) {
-//                                this.addField(fieldNameString, 0, "");
-//                            }
-//                        }
-//                    }
-//                    itemValueCounter++;
-//                }
-//            } else {
-//                //System.out.println("checking value for: " + fieldNameString);
-//                String cellValue = this.getField(fieldNameString);
-//                valueFound = cellValue != null;
-//                if (valueFound && cellValue.length() > 0) {
-//                    this.addField(fieldNameString, 0, cellValue);
-//                }
-//            }
-//            return valueFound;
-//        }
+    //    private void getImdiLinks(Document nodDom) {
+    //        try {
+    //            if (nodDom != null) {
+    //                OurURL baseURL = new OurURL(nodeUri.toURL());
+    ////                debugOut("getIMDILinks");
+    //                IMDILink[] links = api.getIMDILinks(nodDom, baseURL, WSNodeType.CORPUS);
+    ////                debugOut("links.length: " + links.length);
+    //                if (links != null) {
+    //                    for (int linkCount = 0; linkCount < links.length; linkCount++) {
+    //                        childLinks.add(new String[]{links[linkCount].getRawURL().toString(), null});
+    //                    }
+    //                }
+    //            }
+    //        } catch (MalformedURLException mue) {
+    //            System.out.println("Error getting links: " + mue);
+    //        }
+    //    }
+    //        private boolean populateChildFields(String fieldNameString, boolean alwaysShow) {
+    //            // this is called when loading children and when loading fields
+    //            //System.out.println("fieldNameString: " + fieldNameString);
+    //            boolean valueFound = false;
+    //            int counterFieldPosition = fieldNameString.indexOf("(X)");
+    //            if (-1 < counterFieldPosition) {
+    //                int itemValueCounter = 1;
+    //                valueFound = true;
+    //                String firstHalf = fieldNameString.substring(0, counterFieldPosition + 1);
+    //                String secondHalf = fieldNameString.substring(counterFieldPosition + 2);
+    //                while (valueFound) {
+    //                    fieldNameString = firstHalf + itemValueCounter + secondHalf;
+    //                    if (-1 < fieldNameString.indexOf("(X)")) {
+    //                        valueFound = populateChildFields(fieldNameString, alwaysShow);
+    //                    } else {
+    //                        boolean isWrongFieldType = false;
+    //                        if (isImdi()) {
+    //                            if (isSession() && fieldNameString.startsWith("Corpus.")) {
+    //                                // TODO: we could speed things up by not asking the imdi.api for the value of this field, however if there is data so show (presumably erroneous data) it should still be shown
+    //                                isWrongFieldType = true;
+    //                            } else if (fieldNameString.startsWith("Session.")) {
+    //                                isWrongFieldType = true;
+    //                            }
+    //                        }
+    //                        //System.out.println("checking x value for: " + fieldNameString);
+    //                        String cellValue = this.getField(fieldNameString);
+    //                        valueFound = cellValue != null;
+    //                        if (valueFound && cellValue.length() > 0) {
+    //                            this.addField(fieldNameString, 0, cellValue);
+    //                        } else if (alwaysShow) {
+    //                            if (!isWrongFieldType) {
+    //                                this.addField(fieldNameString, 0, "");
+    //                            }
+    //                        }
+    //                    }
+    //                    itemValueCounter++;
+    //                }
+    //            } else {
+    //                //System.out.println("checking value for: " + fieldNameString);
+    //                String cellValue = this.getField(fieldNameString);
+    //                valueFound = cellValue != null;
+    //                if (valueFound && cellValue.length() > 0) {
+    //                    this.addField(fieldNameString, 0, cellValue);
+    //                }
+    //            }
+    //            return valueFound;
+    //        }
     /**
      * Count the next level of child nodes. (non recursive)
      * @return An integer of the next level of child nodes including corpus links and imdi child nodes.
      */
     public int getChildCount() {
-//        System.out.println("getChildCount: " + childLinks.size() + childrenHashtable.size() + " : " + this.getUrlString());
+        //        System.out.println("getChildCount: " + childLinks.size() + childrenHashtable.size() + " : " + this.getUrlString());
         return childArray.length;
     }
 
@@ -653,21 +653,21 @@ public class ImdiTreeObject implements Comparable {
         return childArray;
     }
 
-//    /**
-//     * Used to populate the child list in the show child popup in the imditable.
-//     * @return An enumeration of the next level child nodes.
-//     */
-//    public Enumeration<ImdiTreeObject> getChildEnum() {
-//        return childObjectDomIdHash.elements();
-//    }
-//
-//    /**
-//     * Used to populate the child nodes in the table cell.
-//     * @return A collection of the next level child nodes.
-//     */
-//    public Collection<ImdiTreeObject> getChildCollection() {
-//        return childObjectDomIdHash.values();
-//    }
+    //    /**
+    //     * Used to populate the child list in the show child popup in the imditable.
+    //     * @return An enumeration of the next level child nodes.
+    //     */
+    //    public Enumeration<ImdiTreeObject> getChildEnum() {
+    //        return childObjectDomIdHash.elements();
+    //    }
+    //
+    //    /**
+    //     * Used to populate the child nodes in the table cell.
+    //     * @return A collection of the next level child nodes.
+    //     */
+    //    public Collection<ImdiTreeObject> getChildCollection() {
+    //        return childObjectDomIdHash.values();
+    //    }
     /**
      * Gets the second level child nodes from the fist level child node matching the child type string.
      * Used to populate the child nodes in the table cell.
@@ -701,21 +701,21 @@ public class ImdiTreeObject implements Comparable {
      * To add a node to a dom use addChildNode.
      * @return void
      */
-//    public void attachChildNode(ImdiTreeObject destinationNode) {
-////        System.out.println("attachChildNodeTo: " + this.getUrlString());
-////        System.out.println("attachChildNode: " + destinationNode.getUrlString());
-//        if (destinationNode != this) {
-//            childrenHashtable.put(destinationNode.getUrlString(), destinationNode);
-//        }
-//    }
-//    /**
-//     * Add a resource contained i an imdi object
-//     * @return String path to the added node
-//     */
-//    public String addChildNode(ImdiTreeObject nodeToAdd) {
-//        System.out.println("addChildNode: " + nodeToAdd);
-//        return addChildNode(null, nodeToAdd.getUrlString(), nodeToAdd.mpiMimeType);
-//    }
+    //    public void attachChildNode(ImdiTreeObject destinationNode) {
+    ////        System.out.println("attachChildNodeTo: " + this.getUrlString());
+    ////        System.out.println("attachChildNode: " + destinationNode.getUrlString());
+    //        if (destinationNode != this) {
+    //            childrenHashtable.put(destinationNode.getUrlString(), destinationNode);
+    //        }
+    //    }
+    //    /**
+    //     * Add a resource contained i an imdi object
+    //     * @return String path to the added node
+    //     */
+    //    public String addChildNode(ImdiTreeObject nodeToAdd) {
+    //        System.out.println("addChildNode: " + nodeToAdd);
+    //        return addChildNode(null, nodeToAdd.getUrlString(), nodeToAdd.mpiMimeType);
+    //    }
     // create a subdirectory based on the file name of the node
     // if that fails then the current directory will be returned
     public File getSubDirectory() {
@@ -735,57 +735,57 @@ public class ImdiTreeObject implements Comparable {
      * Loads the child links and returns them as an array
      * @return ImdiTreeObject[] array of child nodes
      */
-//    public void loadChildNodes() {
-//        for (ImdiTreeObject currentChild : childArray) {
-//            GuiHelper.imdiLoader.getImdiObject(null, currentChild.getUrlString());
-//        }
-//        System.out.println("loadChildNodes: " + this);
+    //    public void loadChildNodes() {
+    //        for (ImdiTreeObject currentChild : childArray) {
+    //            GuiHelper.imdiLoader.getImdiObject(null, currentChild.getUrlString());
+    //        }
+    //        System.out.println("loadChildNodes: " + this);
     //waitTillLoaded();
-//        if (!getParentDomNode().imdiDataLoaded) {
+    //        if (!getParentDomNode().imdiDataLoaded) {
     // if this node has been loaded then do not load again
     // to refresh the node and its children the node should be nulled and recreated
-//            autoLoadChildNodes = false;
-//        if (!this.isSession()) {
-//            //getImdiFieldLinks();
-//            for (Enumeration<String[]> childLinksEnum = childLinks.elements(); childLinksEnum.hasMoreElements();) {
-//                String currentChildPath = childLinksEnum.nextElement()[0];
-//                ImdiTreeObject currentImdi = GuiHelper.imdiLoader.getImdiObject(null, currentChildPath);
-////                    System.out.println("adding to list of child nodes 2: " + currentImdi);
-//                childrenHashtable.put(currentImdi.getUrlString(), currentImdi);
-////                    if (ImdiTreeObject.isStringImdi(currentChildPath)) {
-////                        currentImdi.loadImdiDom();
-////                    }
-//                }
-//        }
+    //            autoLoadChildNodes = false;
+    //        if (!this.isSession()) {
+    //            //getImdiFieldLinks();
+    //            for (Enumeration<String[]> childLinksEnum = childLinks.elements(); childLinksEnum.hasMoreElements();) {
+    //                String currentChildPath = childLinksEnum.nextElement()[0];
+    //                ImdiTreeObject currentImdi = GuiHelper.imdiLoader.getImdiObject(null, currentChildPath);
+    ////                    System.out.println("adding to list of child nodes 2: " + currentImdi);
+    //                childrenHashtable.put(currentImdi.getUrlString(), currentImdi);
+    ////                    if (ImdiTreeObject.isStringImdi(currentChildPath)) {
+    ////                        currentImdi.loadImdiDom();
+    ////                    }
+    //                }
+    //        }
     // START: this section uses the imdi.api to query the dom for available fields but it has been commented out in favour of the iterateChildNodes function
-//                System.err.println("Starting to load fields at: " + System.nanoTime());
-//                Long startTime = System.nanoTime();
-//                for (int rowNameCounter = 0; rowNameCounter < imdiFieldArray.length; rowNameCounter++) {
-//                    if (imdiFieldArray[rowNameCounter][0] || imdiFieldArray[rowNameCounter][1]) {
-//                        populateChildFields(imdiFieldViews.getMasterImdiFieldName(rowNameCounter), imdiFieldArray[rowNameCounter][1]);
-//                    }
-//                }
-//                Long nextTime = System.nanoTime();
-////                System.err.println("Starting to print fields at: " + System.nanoTime());
-//                if (nodDom != null) {
-//                    iterateChildNodes(nodDom.getFirstChild(), "");
-//                }
-//                System.err.println("Done loading fields at: " + System.nanoTime());
-//                Long lastTime = System.nanoTime();
-//                System.err.println("first method: " + (nextTime - startTime) + " second method: " + (lastTime - nextTime));
-//                System.err.println("second method took " + (lastTime - nextTime + 0.0) / (nextTime - startTime) * 100 + "% of the time used by the first");
-//                System.err.println("the imdi.api took " + ((nextTime - startTime) / lastTime - nextTime + 0.0) + " times longer");
+    //                System.err.println("Starting to load fields at: " + System.nanoTime());
+    //                Long startTime = System.nanoTime();
+    //                for (int rowNameCounter = 0; rowNameCounter < imdiFieldArray.length; rowNameCounter++) {
+    //                    if (imdiFieldArray[rowNameCounter][0] || imdiFieldArray[rowNameCounter][1]) {
+    //                        populateChildFields(imdiFieldViews.getMasterImdiFieldName(rowNameCounter), imdiFieldArray[rowNameCounter][1]);
+    //                    }
+    //                }
+    //                Long nextTime = System.nanoTime();
+    ////                System.err.println("Starting to print fields at: " + System.nanoTime());
+    //                if (nodDom != null) {
+    //                    iterateChildNodes(nodDom.getFirstChild(), "");
+    //                }
+    //                System.err.println("Done loading fields at: " + System.nanoTime());
+    //                Long lastTime = System.nanoTime();
+    //                System.err.println("first method: " + (nextTime - startTime) + " second method: " + (lastTime - nextTime));
+    //                System.err.println("second method took " + (lastTime - nextTime + 0.0) / (nextTime - startTime) * 100 + "% of the time used by the first");
+    //                System.err.println("the imdi.api took " + ((nextTime - startTime) / lastTime - nextTime + 0.0) + " times longer");
     // END: this section uses the imdi.api to query the dom for available fields but it has been commented out in favour of the iterateChildNodes function
-//        }
-//        Vector<ImdiTreeObject> tempImdiVector = new Vector<ImdiTreeObject>();
-//        Enumeration nodesToAddEnumeration = childrenHashtable.elements();
-//        while (nodesToAddEnumeration.hasMoreElements()) {
-//            tempImdiVector.add((ImdiTreeObject) nodesToAddEnumeration.nextElement());
-//        }
-//        ImdiTreeObject[] returnImdiArray = new ImdiTreeObject[tempImdiVector.size()];
-//        tempImdiVector.toArray(returnImdiArray);
-//        return returnImdiArray;
-//    }
+    //        }
+    //        Vector<ImdiTreeObject> tempImdiVector = new Vector<ImdiTreeObject>();
+    //        Enumeration nodesToAddEnumeration = childrenHashtable.elements();
+    //        while (nodesToAddEnumeration.hasMoreElements()) {
+    //            tempImdiVector.add((ImdiTreeObject) nodesToAddEnumeration.nextElement());
+    //        }
+    //        ImdiTreeObject[] returnImdiArray = new ImdiTreeObject[tempImdiVector.size()];
+    //        tempImdiVector.toArray(returnImdiArray);
+    //        return returnImdiArray;
+    //    }
     public boolean containsFieldValue(String fieldName, String searchValue) {
         boolean findResult = false;
         ImdiField[] currentFieldArray = this.fieldHashtable.get(fieldName);
@@ -815,10 +815,10 @@ public class ImdiTreeObject implements Comparable {
         return findResult;
     }
 
-// this is used to disable the node in the tree gui
+    // this is used to disable the node in the tree gui
     public boolean getNodeEnabled() {
-//       ---      TODO: here we could look through all the fields in this node against the current filed view, if node are showing then return false 
-//       ---      when the global field view is changed then set all nodeEnabled blaaaa
+        //       ---      TODO: here we could look through all the fields in this node against the current filed view, if node are showing then return false
+        //       ---      when the global field view is changed then set all nodeEnabled blaaaa
         return nodeEnabled;
     }
 
@@ -830,47 +830,47 @@ public class ImdiTreeObject implements Comparable {
         return childArray.length > 0;
     }
 
-//    /*
-//     * gets an array of
-//     */
-//    public int[] getRecursiveChildCount() {
-////        debugOut("getChildCount: " + this.toString());
-//        int[] returnArray = new int[2];
-//        returnArray[0] = 0;
-//        returnArray[1] = 0;
-//        if (imdiDataLoaded) {
-//            returnArray[1] += 1; // count this node
-//            Enumeration nodesToAddEnumeration = childrenHashtable.elements();
-//            while (nodesToAddEnumeration.hasMoreElements()) {
-//                // count the child nodes
-//                int[] childCount = ((ImdiTreeObject) nodesToAddEnumeration.nextElement()).getRecursiveChildCount();
-//                returnArray[0] += childCount[0];
-//                returnArray[1] += childCount[1];
-//            }
-//        } else {
-//            if (this.isImdi()) {
-//                returnArray[0] = 1;
-//            }
-//        }
-//        return returnArray;
-//    }
-//    public void loadNextLevelOfChildren(long stopTime) {
-////        debugOut("loadNextLevelOfChildren: " + this.toString() + ":" + (System.currentTimeMillis() - stopTime));
-//        if (System.currentTimeMillis() > stopTime) {
-//            return;
-//        }
-//        if (this.isImdi()) {
-//            if (getParentDomNode().imdiDataLoaded) {
-//                Enumeration nodesToAddEnumeration = childrenHashtable.elements();
-//                while (nodesToAddEnumeration.hasMoreElements()) {
-//                    // load one level of child nodes
-//                    ((ImdiTreeObject) nodesToAddEnumeration.nextElement()).loadNextLevelOfChildren(stopTime);
-//                    //((ImdiTreeObject) nodesToAddEnumeration.nextElement()).();
-//                }
-//            }
-//        }
-////        debugOut("listDiscardedOfAttributes: " + listDiscardedOfAttributes);
-//    }
+    //    /*
+    //     * gets an array of
+    //     */
+    //    public int[] getRecursiveChildCount() {
+    ////        debugOut("getChildCount: " + this.toString());
+    //        int[] returnArray = new int[2];
+    //        returnArray[0] = 0;
+    //        returnArray[1] = 0;
+    //        if (imdiDataLoaded) {
+    //            returnArray[1] += 1; // count this node
+    //            Enumeration nodesToAddEnumeration = childrenHashtable.elements();
+    //            while (nodesToAddEnumeration.hasMoreElements()) {
+    //                // count the child nodes
+    //                int[] childCount = ((ImdiTreeObject) nodesToAddEnumeration.nextElement()).getRecursiveChildCount();
+    //                returnArray[0] += childCount[0];
+    //                returnArray[1] += childCount[1];
+    //            }
+    //        } else {
+    //            if (this.isImdi()) {
+    //                returnArray[0] = 1;
+    //            }
+    //        }
+    //        return returnArray;
+    //    }
+    //    public void loadNextLevelOfChildren(long stopTime) {
+    ////        debugOut("loadNextLevelOfChildren: " + this.toString() + ":" + (System.currentTimeMillis() - stopTime));
+    //        if (System.currentTimeMillis() > stopTime) {
+    //            return;
+    //        }
+    //        if (this.isImdi()) {
+    //            if (getParentDomNode().imdiDataLoaded) {
+    //                Enumeration nodesToAddEnumeration = childrenHashtable.elements();
+    //                while (nodesToAddEnumeration.hasMoreElements()) {
+    //                    // load one level of child nodes
+    //                    ((ImdiTreeObject) nodesToAddEnumeration.nextElement()).loadNextLevelOfChildren(stopTime);
+    //                    //((ImdiTreeObject) nodesToAddEnumeration.nextElement()).();
+    //                }
+    //            }
+    //        }
+    ////        debugOut("listDiscardedOfAttributes: " + listDiscardedOfAttributes);
+    //    }
     private void getAllFields(Vector<ImdiField[]> allFields) {
         // returns all fields relevant to the parent node
         // that includes all indinodechild fields but not from any other imdi file
@@ -883,41 +883,41 @@ public class ImdiTreeObject implements Comparable {
         }
     }
 
-//    public void deleteFromParentDom(String[] childNodeXmlIdArray) {
-////        System.out.println("deleteFromParentDom: " + childNodeXmlIdArray);
-//        if (this.isImdiChild()) {
-//            this.domParentImdi.deleteFromParentDom(new String[]{this.xmlNodeId});
-//        } else {
-//            // save the node if it need saving
-//            if (needsSaveToDisk) {
-//                saveChangesToCache(false);
-//            }
-////            System.out.println("attempting to remove nodes");
-//            try {
-//                OurURL inUrlLocal = new OurURL(nodeUri.toURL());
-//                Document nodDom;
-//                nodDom = api.loadIMDIDocument(inUrlLocal, false);
-//                for (String currentNodeXmlId : childNodeXmlIdArray) {
-//                    IMDIElement target = new IMDIElement(null, currentNodeXmlId);
-//                    api.removeIMDIElement(nodDom, target);
-//                }
-//                api.writeDOM(nodDom, this.getFile(), false);
-//                reloadNode();
-//            } catch (Exception ex) {
-//                GuiHelper.linorgBugCatcher.logError(ex);
-//            }
-//        }
-//    }
-//    public void deleteFeilds(ImdiField[] targetImdiFields) {
-//        ArrayList<String> pathList = new ArrayList<String>();
-//        for (ImdiField currentField : targetImdiFields) {
-//            pathList.add(currentField.getFullXmlPath());
-//        }
-//        CmdiComponentBuilder componentBuilder = new CmdiComponentBuilder();
-//        boolean result = componentBuilder.removeChildNodes(this, pathList.toArray(new String[]{}));
-//
-////        deleteFromDomViaId(domIdList.toArray(new String[]{}));
-//    }
+    //    public void deleteFromParentDom(String[] childNodeXmlIdArray) {
+    ////        System.out.println("deleteFromParentDom: " + childNodeXmlIdArray);
+    //        if (this.isImdiChild()) {
+    //            this.domParentImdi.deleteFromParentDom(new String[]{this.xmlNodeId});
+    //        } else {
+    //            // save the node if it need saving
+    //            if (needsSaveToDisk) {
+    //                saveChangesToCache(false);
+    //            }
+    ////            System.out.println("attempting to remove nodes");
+    //            try {
+    //                OurURL inUrlLocal = new OurURL(nodeUri.toURL());
+    //                Document nodDom;
+    //                nodDom = api.loadIMDIDocument(inUrlLocal, false);
+    //                for (String currentNodeXmlId : childNodeXmlIdArray) {
+    //                    IMDIElement target = new IMDIElement(null, currentNodeXmlId);
+    //                    api.removeIMDIElement(nodDom, target);
+    //                }
+    //                api.writeDOM(nodDom, this.getFile(), false);
+    //                reloadNode();
+    //            } catch (Exception ex) {
+    //                GuiHelper.linorgBugCatcher.logError(ex);
+    //            }
+    //        }
+    //    }
+    //    public void deleteFeilds(ImdiField[] targetImdiFields) {
+    //        ArrayList<String> pathList = new ArrayList<String>();
+    //        for (ImdiField currentField : targetImdiFields) {
+    //            pathList.add(currentField.getFullXmlPath());
+    //        }
+    //        CmdiComponentBuilder componentBuilder = new CmdiComponentBuilder();
+    //        boolean result = componentBuilder.removeChildNodes(this, pathList.toArray(new String[]{}));
+    //
+    ////        deleteFromDomViaId(domIdList.toArray(new String[]{}));
+    //    }
     // this is used to delete an IMDI node from a corpus branch
     public void deleteCorpusLink(ImdiTreeObject[] targetImdiNodes) {
         // TODO: There is an issue when deleting child nodes that the remaining nodes xml path (x) will be incorrect as will the xmlnode id hence the node in a table may be incorrect after a delete
@@ -930,19 +930,19 @@ public class ImdiTreeObject implements Comparable {
             System.out.println("deleting by corpus link");
             URI[] copusUriList = new URI[targetImdiNodes.length];
             for (int nodeCounter = 0; nodeCounter < targetImdiNodes.length; nodeCounter++) {
-//                if (targetImdiNodes[nodeCounter].hasResource()) {
-//                    copusUriList[nodeCounter] = targetImdiNodes[nodeCounter].getFullResourceURI(); // todo: should this resouce case be used here? maybe just the uri
-//                } else {
+                //                if (targetImdiNodes[nodeCounter].hasResource()) {
+                //                    copusUriList[nodeCounter] = targetImdiNodes[nodeCounter].getFullResourceURI(); // todo: should this resouce case be used here? maybe just the uri
+                //                } else {
                 copusUriList[nodeCounter] = targetImdiNodes[nodeCounter].getURI();
-//                }
+                //                }
             }
             metadataUtils.removeCorpusLink(this.getURI(), copusUriList);
             this.getParentDomNode().loadImdiDom();
         }
-//        for (ImdiTreeObject currentChildNode : targetImdiNodes) {
-////            currentChildNode.clearIcon();
-//            TreeHelper.getSingleInstance().updateTreeNodeChildren(currentChildNode);
-//        }
+        //        for (ImdiTreeObject currentChildNode : targetImdiNodes) {
+        ////            currentChildNode.clearIcon();
+        //            TreeHelper.getSingleInstance().updateTreeNodeChildren(currentChildNode);
+        //        }
         for (ImdiTreeObject removedChild : targetImdiNodes) {
             removedChild.removeFromAllContainers();
         }
@@ -953,8 +953,8 @@ public class ImdiTreeObject implements Comparable {
 
     public boolean hasCatalogue() {
         for (ImdiTreeObject childNode : childArray) {
-//            String currentChildPath = currentLinkPair[0];
-//            ImdiTreeObject childNode = ImdiLoader.getSingleInstance().getImdiObject(null, currentChildPath);
+            //            String currentChildPath = currentLinkPair[0];
+            //            ImdiTreeObject childNode = ImdiLoader.getSingleInstance().getImdiObject(null, currentChildPath);
             //childNode.waitTillLoaded(); // if the child nodes have not been loaded this will fail so we must wait here
             if (childNode.isCatalogue()) {
                 return true;
@@ -964,10 +964,11 @@ public class ImdiTreeObject implements Comparable {
     }
 
     public boolean addCorpusLink(ImdiTreeObject targetImdiNode) {
+        todo: this is the only place left that an error could occur causing this issue ---- so check that it cannot return true after a fail ----Basically, all you have to do is download our Corpus (Hoocak) into your local corpus. Then take any number of sessions (best from one of the nodes "narrative texts", because they contain the most sessions), select them and then try to drag and drop them into a different node (e.g. ludophile texts). Usually, one (or no) session is moved, the rest (whether it's magic or not) disappear to I don't know where:-(
         boolean linkAlreadyExists = false;
         if (targetImdiNode.isCatalogue()) {
             if (this.hasCatalogue()) {
-//                LinorgWindowManager.getSingleInstance().addMessageDialogToQueue("Only one catalogue can be added", null);
+                //                LinorgWindowManager.getSingleInstance().addMessageDialogToQueue("Only one catalogue can be added", null);
                 // prevent adding a second catalogue file
                 return false;
             }
@@ -1002,7 +1003,7 @@ public class ImdiTreeObject implements Comparable {
                 metadataUtils.addCorpusLink(this.getURI(), new URI[]{targetImdiNode.getURI()});
             }
             //loadChildNodes(); // this must not be done here
-//            clearIcon(); // this must be cleared so that the leaf / branch flag gets set
+            //            clearIcon(); // this must be cleared so that the leaf / branch flag gets set
             return true;
         }
     }
@@ -1052,7 +1053,7 @@ public class ImdiTreeObject implements Comparable {
      */
     public void saveChangesToCache(boolean updateUI) {
         if (this != getParentDomNode()) {
-//        if (this.isImdiChild()) {
+            //        if (this.isImdiChild()) {
             getParentDomNode().saveChangesToCache(updateUI);
             return;
         }
@@ -1088,10 +1089,10 @@ public class ImdiTreeObject implements Comparable {
             LinorgWindowManager.getSingleInstance().addMessageDialogToQueue("Error saving changes to disk, check the log file via the help menu for more information.", "Save");
         } else {
             this.needsSaveToDisk = false;
-//            // update the icon to indicate the change
-//            setImdiNeedsSaveToDisk(null, false);
+            //            // update the icon to indicate the change
+            //            setImdiNeedsSaveToDisk(null, false);
         }
-//        clearIcon(); this is called by setImdiNeedsSaveToDisk
+        //        clearIcon(); this is called by setImdiNeedsSaveToDisk
     }
 
     /**
@@ -1100,59 +1101,59 @@ public class ImdiTreeObject implements Comparable {
      * @param nodDom The dom for this node that will be saved.
      * @return A string path of the saved location.
      */
-//    public String saveNodeToCache(Document nodDom) {
-//        String cacheLocation = null;
-//        System.out.println("saveBranchToLocal: " + this.toString());
-//        if (this.isImdi() && !this.isImdiChild()) {
-//            if (nodDom != null) {
-//                //System.out.println("saveBranchToLocal: " + this.getUrl());
-//                //System.out.println("saveBranchToLocal: " + this.nodDom.);
-//
-//                String destinationPath = GuiHelper.linorgSessionStorage.getSaveLocation(this.getUrlString());
-//
-////                debugOut("destinationPath: " + destinationPath);
-//                File tempFile = new File(destinationPath);
-//                // only save the file if it does not exist, otherwise local changes would be lost and it would be pointless anyway
-//                if (tempFile.exists()) {
-//                    System.out.println("this imdi is already in the cache");
-//                } else {
-//                    // this function of the imdi.api will modify the imdi file as it saves it "(will be normalized and possibly de-domId-ed)"
-//                    // this will make it dificult to determin if changes are from this function of by the user deliberatly making a chage
-//                    api.writeDOM(nodDom, new File(destinationPath), false);
-//                    // at this point the file should exist and not have been modified by the user
-//                    // create hash index with server url but basedon the saved file
-//                    // note that if the imdi.api has changed this file then it will not be detected
-//                    // TODO: it will be best to change this to use the server api get mb5 sum when it is written
-//                    // TODO: there needs to be some mechanism to check for changes on the server and update the local copy
-//                    //getHash(tempFile, this.getUrl());
-//                    System.out.println("imdi should be saved in cache now");
-//                }
-//                // no point iterating child nodes which have not been loaded, it is better to do the outside this function
-////                    Enumeration nodesToAddEnumeration = childrenHashtable.elements();
-////                    while (nodesToAddEnumeration.hasMoreElements()) {
-//////                        ((ImdiTreeObject) nodesToAddEnumeration.nextElement()).saveBranchToLocal(destinationDirectory);
-////                    }
-//                cacheLocation = destinationPath;
-//
-//            }
-//        }
-//        return cacheLocation;
-//    }
+    //    public String saveNodeToCache(Document nodDom) {
+    //        String cacheLocation = null;
+    //        System.out.println("saveBranchToLocal: " + this.toString());
+    //        if (this.isImdi() && !this.isImdiChild()) {
+    //            if (nodDom != null) {
+    //                //System.out.println("saveBranchToLocal: " + this.getUrl());
+    //                //System.out.println("saveBranchToLocal: " + this.nodDom.);
+    //
+    //                String destinationPath = GuiHelper.linorgSessionStorage.getSaveLocation(this.getUrlString());
+    //
+    ////                debugOut("destinationPath: " + destinationPath);
+    //                File tempFile = new File(destinationPath);
+    //                // only save the file if it does not exist, otherwise local changes would be lost and it would be pointless anyway
+    //                if (tempFile.exists()) {
+    //                    System.out.println("this imdi is already in the cache");
+    //                } else {
+    //                    // this function of the imdi.api will modify the imdi file as it saves it "(will be normalized and possibly de-domId-ed)"
+    //                    // this will make it dificult to determin if changes are from this function of by the user deliberatly making a chage
+    //                    api.writeDOM(nodDom, new File(destinationPath), false);
+    //                    // at this point the file should exist and not have been modified by the user
+    //                    // create hash index with server url but basedon the saved file
+    //                    // note that if the imdi.api has changed this file then it will not be detected
+    //                    // TODO: it will be best to change this to use the server api get mb5 sum when it is written
+    //                    // TODO: there needs to be some mechanism to check for changes on the server and update the local copy
+    //                    //getHash(tempFile, this.getUrl());
+    //                    System.out.println("imdi should be saved in cache now");
+    //                }
+    //                // no point iterating child nodes which have not been loaded, it is better to do the outside this function
+    ////                    Enumeration nodesToAddEnumeration = childrenHashtable.elements();
+    ////                    while (nodesToAddEnumeration.hasMoreElements()) {
+    //////                        ((ImdiTreeObject) nodesToAddEnumeration.nextElement()).saveBranchToLocal(destinationDirectory);
+    ////                    }
+    //                cacheLocation = destinationPath;
+    //
+    //            }
+    //        }
+    //        return cacheLocation;
+    //    }
     public void addField(ImdiField fieldToAdd) {
-//        System.addField:out.println("addField: " + this.getUrlString() + " : " + fieldToAdd.xmlPath + " : " + fieldToAdd.getFieldValue());
+        //        System.addField:out.println("addField: " + this.getUrlString() + " : " + fieldToAdd.xmlPath + " : " + fieldToAdd.getFieldValue());
         ImdiField[] currentFieldsArray = fieldHashtable.get(fieldToAdd.getTranslateFieldName());
         if (currentFieldsArray == null) {
             currentFieldsArray = new ImdiField[]{fieldToAdd};
         } else {
-//            System.out.println("appendingField: " + fieldToAdd);
+            //            System.out.println("appendingField: " + fieldToAdd);
             ImdiField[] appendedFieldsArray = new ImdiField[currentFieldsArray.length + 1];
             System.arraycopy(currentFieldsArray, 0, appendedFieldsArray, 0, currentFieldsArray.length);
             appendedFieldsArray[appendedFieldsArray.length - 1] = fieldToAdd;
             currentFieldsArray = appendedFieldsArray;
 
-//            for (ImdiField tempField : currentFieldsArray) {
-//                System.out.println("appended fields: " + tempField);
-//            }
+            //            for (ImdiField tempField : currentFieldsArray) {
+            //                System.out.println("appended fields: " + tempField);
+            //            }
         }
         fieldHashtable.put(fieldToAdd.getTranslateFieldName(), currentFieldsArray);
 
@@ -1169,72 +1170,72 @@ public class ImdiTreeObject implements Comparable {
      * @param addedImdiNodes Returns with all the imdi child nodes that have been added during the process.
      * @param useCache If true the the imdi file will be saved to the cache.
      */
-//    private void addField(ImdiField fieldToAdd, int childLevel, Vector addedImdiNodes) {
-//        // TODO: modify this so that each child node gets the full filename and full xml path
-////            if (isImdi()) {
-////                if (fieldLabel.startsWith("Session.")) {
-////                    fieldLabel = fieldLabel.substring(8);
-////                } else if (fieldLabel.startsWith("Corpus.")) {
-////                    fieldLabel = fieldLabel.substring(7);
-////                }
-////            }
-//        //fieldUrl.substring(firstSeparator + 1)
-//        // TODO: move this and we write to imdischema
-//        int nextChildLevel = fieldToAdd.translatedPath.replace(")", "(").indexOf("(", childLevel);
-//        debugOut("fieldLabel: " + fieldToAdd.translatedPath + " cellValue: " + fieldToAdd.fieldValue + " childLevel: " + childLevel + " nextChildLevel: " + nextChildLevel);
-//        if (nextChildLevel == -1) {
-//            // add the label to this level node
-////                if (fieldLabel == null) fieldLabel = "oops null";
-////                if (fieldValue == null) fieldValue = "oops null";
-//            String childsLabel = fieldToAdd.translatedPath.substring(childLevel);
-//            fieldHashtable.put(childsLabel, fieldToAdd);
-//
-////                if (childsLabel.endsWith(".Date")) {
-////                    DateFormat df = new SimpleDateFormat("yyyy-MM-DD");
-////                    try {
-////                        nodeDate = df.parse(fieldToAdd.fieldValue);
-////                        if (minNodeDate == null) {
-////                            minNodeDate = nodeDate;
-////                            maxNodeDate = nodeDate;
-////                        }
-////                        if (nodeDate.before(minNodeDate)) {
-////                            minNodeDate = nodeDate;
-////                        }
-////                        if (nodeDate.after(maxNodeDate)) {
-////                            maxNodeDate = nodeDate;
-////                        }
-////                    } catch (Exception ex) {
-////                        System.err.println(ex.getMessage());
-////                    }
-////                }
-//            // if the node contains a ResourceLink then save the location in resourceUrlString and create a hash for the file
-//            if (childsLabel.equals(MetadataReader.imdiPathSeparator + "ResourceLink")) {
-////                        // resolve the relative location of the file
-////                        File resourceFile = new File(this.getFile().getParent(), fieldToAdd.fieldValue);
-////                        resourceUrlString = resourceFile.getCanonicalPath();
-//                resourceUrlString = fieldToAdd.fieldValue;
-////                if (useCache) {
-////                    GuiHelper.linorgSessionStorage.updateCache(getFullResourceURI());
-////                }
-//                mimeHashQueue.addToQueue(this);
-//            }
-//        } else {
-//            // pass the label to the child nodes
-//            String childsName = fieldToAdd.translatedPath.substring(childLevel, nextChildLevel);
-//            //String parentName = fieldLabel.substring(0, firstSeparator);
-//            debugOut("childsName: " + childsName);
-//            if (!childrenHashtable.containsKey(childsName)) {
-//                ImdiTreeObject tempImdiTreeObject = GuiHelper.imdiLoader.getImdiObject(childsName, this.getUrlString() + "#" + fieldToAdd.xmlPath);
-//                if (addedImdiNodes != null) {
-//                    addedImdiNodes.add(tempImdiTreeObject);
-//                }
-//                tempImdiTreeObject.imdiDataLoaded = true;
-////                System.out.println("adding to list of child nodes 3: " + tempImdiTreeObject);
-//                childrenHashtable.put(childsName, tempImdiTreeObject);
-//            }
-//            ((ImdiTreeObject) childrenHashtable.get(childsName)).addField(fieldToAdd, nextChildLevel + 1, addedImdiNodes);
-//        }
-//    }
+    //    private void addField(ImdiField fieldToAdd, int childLevel, Vector addedImdiNodes) {
+    //        // TODO: modify this so that each child node gets the full filename and full xml path
+    ////            if (isImdi()) {
+    ////                if (fieldLabel.startsWith("Session.")) {
+    ////                    fieldLabel = fieldLabel.substring(8);
+    ////                } else if (fieldLabel.startsWith("Corpus.")) {
+    ////                    fieldLabel = fieldLabel.substring(7);
+    ////                }
+    ////            }
+    //        //fieldUrl.substring(firstSeparator + 1)
+    //        // TODO: move this and we write to imdischema
+    //        int nextChildLevel = fieldToAdd.translatedPath.replace(")", "(").indexOf("(", childLevel);
+    //        debugOut("fieldLabel: " + fieldToAdd.translatedPath + " cellValue: " + fieldToAdd.fieldValue + " childLevel: " + childLevel + " nextChildLevel: " + nextChildLevel);
+    //        if (nextChildLevel == -1) {
+    //            // add the label to this level node
+    ////                if (fieldLabel == null) fieldLabel = "oops null";
+    ////                if (fieldValue == null) fieldValue = "oops null";
+    //            String childsLabel = fieldToAdd.translatedPath.substring(childLevel);
+    //            fieldHashtable.put(childsLabel, fieldToAdd);
+    //
+    ////                if (childsLabel.endsWith(".Date")) {
+    ////                    DateFormat df = new SimpleDateFormat("yyyy-MM-DD");
+    ////                    try {
+    ////                        nodeDate = df.parse(fieldToAdd.fieldValue);
+    ////                        if (minNodeDate == null) {
+    ////                            minNodeDate = nodeDate;
+    ////                            maxNodeDate = nodeDate;
+    ////                        }
+    ////                        if (nodeDate.before(minNodeDate)) {
+    ////                            minNodeDate = nodeDate;
+    ////                        }
+    ////                        if (nodeDate.after(maxNodeDate)) {
+    ////                            maxNodeDate = nodeDate;
+    ////                        }
+    ////                    } catch (Exception ex) {
+    ////                        System.err.println(ex.getMessage());
+    ////                    }
+    ////                }
+    //            // if the node contains a ResourceLink then save the location in resourceUrlString and create a hash for the file
+    //            if (childsLabel.equals(MetadataReader.imdiPathSeparator + "ResourceLink")) {
+    ////                        // resolve the relative location of the file
+    ////                        File resourceFile = new File(this.getFile().getParent(), fieldToAdd.fieldValue);
+    ////                        resourceUrlString = resourceFile.getCanonicalPath();
+    //                resourceUrlString = fieldToAdd.fieldValue;
+    ////                if (useCache) {
+    ////                    GuiHelper.linorgSessionStorage.updateCache(getFullResourceURI());
+    ////                }
+    //                mimeHashQueue.addToQueue(this);
+    //            }
+    //        } else {
+    //            // pass the label to the child nodes
+    //            String childsName = fieldToAdd.translatedPath.substring(childLevel, nextChildLevel);
+    //            //String parentName = fieldLabel.substring(0, firstSeparator);
+    //            debugOut("childsName: " + childsName);
+    //            if (!childrenHashtable.containsKey(childsName)) {
+    //                ImdiTreeObject tempImdiTreeObject = GuiHelper.imdiLoader.getImdiObject(childsName, this.getUrlString() + "#" + fieldToAdd.xmlPath);
+    //                if (addedImdiNodes != null) {
+    //                    addedImdiNodes.add(tempImdiTreeObject);
+    //                }
+    //                tempImdiTreeObject.imdiDataLoaded = true;
+    ////                System.out.println("adding to list of child nodes 3: " + tempImdiTreeObject);
+    //                childrenHashtable.put(childsName, tempImdiTreeObject);
+    //            }
+    //            ((ImdiTreeObject) childrenHashtable.get(childsName)).addField(fieldToAdd, nextChildLevel + 1, addedImdiNodes);
+    //        }
+    //    }
     /**
      * Gets the fields in this node, this does not include any imdi child fields.
      * To get all fields relevant the imdi file use "getAllFields()" which includes imdi child fields.
@@ -1246,31 +1247,31 @@ public class ImdiTreeObject implements Comparable {
         return fieldHashtable;
     }
 
-//    public String getCommonFieldPathString() {
-//        // find repetitious path strings in the fields for this node so they can be omitted from the table display
-//        if (commonFieldPathString == null) {
-//            if (fieldHashtable.size() < 2) {
-//                // if there is only one field name then it would be reduced to zero length which we do not want
-//                commonFieldPathString = "";
-//            } else {
-//                String commonPath = null;
-//                for (ImdiField[] currentField : fieldHashtable.values()) {
-//                    if (commonPath == null) {
-//                        commonPath = currentField[0].xmlPath;
-//                    } else {
-//                        int matchingIndex = commonPath.length();
-//                        while (matchingIndex > 0 && !commonPath.substring(0, matchingIndex).equals(currentField[0].xmlPath.substring(0, matchingIndex))) {
-//                            System.out.println("matchingIndex: " + matchingIndex + "\t" + commonPath.substring(0, matchingIndex));
-//                            matchingIndex--;
-//                        }
-//                        commonPath = commonPath.substring(0, matchingIndex);
-//                    }
-//                }
-//                commonFieldPathString = commonPath;
-//            }
-//        }
-//        return commonFieldPathString;
-//    }
+    //    public String getCommonFieldPathString() {
+    //        // find repetitious path strings in the fields for this node so they can be omitted from the table display
+    //        if (commonFieldPathString == null) {
+    //            if (fieldHashtable.size() < 2) {
+    //                // if there is only one field name then it would be reduced to zero length which we do not want
+    //                commonFieldPathString = "";
+    //            } else {
+    //                String commonPath = null;
+    //                for (ImdiField[] currentField : fieldHashtable.values()) {
+    //                    if (commonPath == null) {
+    //                        commonPath = currentField[0].xmlPath;
+    //                    } else {
+    //                        int matchingIndex = commonPath.length();
+    //                        while (matchingIndex > 0 && !commonPath.substring(0, matchingIndex).equals(currentField[0].xmlPath.substring(0, matchingIndex))) {
+    //                            System.out.println("matchingIndex: " + matchingIndex + "\t" + commonPath.substring(0, matchingIndex));
+    //                            matchingIndex--;
+    //                        }
+    //                        commonPath = commonPath.substring(0, matchingIndex);
+    //                    }
+    //                }
+    //                commonFieldPathString = commonPath;
+    //            }
+    //        }
+    //        return commonFieldPathString;
+    //    }
     /**
      * Compares this node to another based on its type and string value.
      * @return The string comparison result.
@@ -1316,7 +1317,7 @@ public class ImdiTreeObject implements Comparable {
             }
             System.out.println("isLoadingCount: " + isLoadingCount);
             if (!isLoading()) {
-//                    this.notifyAll();
+                //                    this.notifyAll();
                 clearChildIcons();
                 clearIcon();
             }
@@ -1338,25 +1339,25 @@ public class ImdiTreeObject implements Comparable {
 
     public String refreshStringValue() {
         if (isLoading()) {
-//            if (lastNodeText.length() > 0) {
-//                return lastNodeText;
-//            } else {asdasdasd
-////                if (nodeText != null && nodeText.length() > 0) {
+            //            if (lastNodeText.length() > 0) {
+            //                return lastNodeText;
+            //            } else {asdasdasd
+            ////                if (nodeText != null && nodeText.length() > 0) {
             return lastNodeText;
-//            }
+            //            }
         } else if (lastNodeText.equals("loading imdi...") && getParentDomNode().imdiDataLoaded) {
             lastNodeText = "                      ";
         }
-//        if (commonFieldPathString != null && commonFieldPathString.length() > 0) {
-//            // todo: use the commonFieldPathString as the node name if not display preference is set or the ones that are set have no value
-//            nodeText = commonFieldPathString;
-//        }
+        //        if (commonFieldPathString != null && commonFieldPathString.length() > 0) {
+        //            // todo: use the commonFieldPathString as the node name if not display preference is set or the ones that are set have no value
+        //            nodeText = commonFieldPathString;
+        //        }
         boolean foundPreferredNameField = false;
         getLabelString:
         for (String currentPreferredName : this.getNodeTemplate().preferredNameFields) {
             //System.out.println("currentField: " + currentPreferredName);
             for (ImdiField[] currentFieldArray : fieldHashtable.values()) {
-//                System.out.println(currentFieldArray[0].getFullXmlPath().replaceAll("\\(\\d+\\)", "") + " : " + currentPreferredName);
+                //                System.out.println(currentFieldArray[0].getFullXmlPath().replaceAll("\\(\\d+\\)", "") + " : " + currentPreferredName);
                 if (currentFieldArray[0].getFullXmlPath().replaceAll("\\(\\d+\\)", "").equals(currentPreferredName)) {
                     for (ImdiField currentField : currentFieldArray) {
                         if (currentField != null) {
@@ -1375,7 +1376,7 @@ public class ImdiTreeObject implements Comparable {
                     if (currentField != null) {
                         if (currentField.toString().trim().length() > 0) {
                             nodeText = currentField.toString();
-//                            System.out.println("nodeText: " + nodeText);
+                            //                            System.out.println("nodeText: " + nodeText);
                             foundPreferredNameField = true;
                             break getLabelString;
                         }
@@ -1384,23 +1385,33 @@ public class ImdiTreeObject implements Comparable {
             }
         }
 
-        if (!foundPreferredNameField && isCmdiMetaDataNode() /*&& fieldHashtable.size() > 0 && domParentImdi == this*/ && this.nodeTemplate != null) {
-//            if (this.getNodeTemplate().preferredNameFields.length == 0) {
-//                nodeText = "no field specified to name this node (" + this.nodeTemplate.getTemplateName() + ")";
-//            } else {
-            nodeText = "unnamed (" + this.nodeTemplate.getTemplateName() + ")";
-//            }
+        if (!foundPreferredNameField && isCmdiMetaDataNode() /*&& fieldHashtable.size() > 0 && domParentImdi == this*/) {
+            String unamedText;
+            String nodeFragmentName = this.getURI().getFragment();
+            if (nodeFragmentName != null) {
+                nodeFragmentName = nodeFragmentName.substring(nodeFragmentName.lastIndexOf(".") + 1);
+                nodeFragmentName = nodeFragmentName.replaceAll("\\(\\d\\)", "");
+                unamedText = nodeFragmentName;
+            } else if (this.nodeTemplate != null) {
+                //            if (this.getNodeTemplate().preferredNameFields.length == 0) {
+                //                nodeText = "no field specified to name this node (" + this.nodeTemplate.getTemplateName() + ")";
+                //            } else {
+                unamedText = this.nodeTemplate.getTemplateName();
+            } else {
+                unamedText = "";
+            }
+            nodeText = "unnamed (" + unamedText + ")";
         }
-//        if (!foundPreferredNameField && isCmdiMetaDataNode() && domParentImdi == this && fieldHashtable.size() > 0) {
-//            // only if no name has been found and only for cmdi nodes and only when this is the dom parent node
-//            nodeText = fieldHashtable.elements().nextElement()[0].getFullXmlPath().split("\\.")[3];
-//        }
+        //        if (!foundPreferredNameField && isCmdiMetaDataNode() && domParentImdi == this && fieldHashtable.size() > 0) {
+        //            // only if no name has been found and only for cmdi nodes and only when this is the dom parent node
+        //            nodeText = fieldHashtable.elements().nextElement()[0].getFullXmlPath().split("\\.")[3];
+        //        }
         if (hasResource()) {
             URI resourceUri = getFullResourceURI();
             if (resourceUri != null) {
                 String resourcePathString = resourceUri.toString();
                 int lastIndex = resourcePathString.lastIndexOf("/");
-//                if (lastIndex)
+                //                if (lastIndex)
                 resourcePathString = resourcePathString.substring(lastIndex + 1);
                 try {
                     resourcePathString = URLDecoder.decode(resourcePathString, "UTF-8");
@@ -1417,7 +1428,7 @@ public class ImdiTreeObject implements Comparable {
                 nodeText = infoTitle;
             }
         }
-//        nodeTextChanged = lastNodeText.equals(nodeText + nameText);
+        //        nodeTextChanged = lastNodeText.equals(nodeText + nameText);
         if (nodeText != null) {
             if (isMetaDataNode()) {
                 File nodeFile = this.getFile();
@@ -1431,7 +1442,7 @@ public class ImdiTreeObject implements Comparable {
             lastNodeText = "                      ";
         }
         return lastNodeText;// + "-" + clearIconCounterGlobal + "-" + clearIconCounter;
-//            }
+        //            }
     }
 
     /**
@@ -1514,7 +1525,7 @@ public class ImdiTreeObject implements Comparable {
         Vector<String[]> historyVector = new Vector<String[]>();
         int versionCounter = 0;
         File currentHistoryFile;
-//        historyVector.add(new String[]{"Current", ""});
+        //        historyVector.add(new String[]{"Current", ""});
         if (!isHeadRevision()) {
             historyVector.add(new String[]{"Last Save", ".x"});
         }
@@ -1569,7 +1580,7 @@ public class ImdiTreeObject implements Comparable {
         //TODO: the template add does not create a new history file
         int versionCounter = 0;
         File headVersion = this.getFile();
-//        if the .x file (the last head) exist then replace the current with it
+        //        if the .x file (the last head) exist then replace the current with it
         if (new File(this.getFile().getAbsolutePath() + ".x").exists()) {
             versionCounter++;
             headVersion = new File(this.getFile().getAbsolutePath() + ".x");
@@ -1623,8 +1634,8 @@ public class ImdiTreeObject implements Comparable {
             URI targetUri;
             if (uriParts.length > 1) {
                 // todo: this will not allow urls that have square brackets in them due to yet another bug in the java URI class
-//                String bracketEncodedPath = uriParts[1].replaceAll("\\[", "%5B");
-//                bracketEncodedPath = bracketEncodedPath.replaceAll("\\]", "%5D");
+                //                String bracketEncodedPath = uriParts[1].replaceAll("\\[", "%5B");
+                //                bracketEncodedPath = bracketEncodedPath.replaceAll("\\]", "%5D");
                 String bracketEncodedPath = uriParts[1];
                 //org.apache.commons.httpclient.URI test = null;
 
@@ -1633,11 +1644,11 @@ public class ImdiTreeObject implements Comparable {
             } else {
                 targetUri = new URI(null, targetUriString, null);
             }
-//            System.out.println("nodeUri: " + nodeUri);
+            //            System.out.println("nodeUri: " + nodeUri);
             URI resourceUri = nodeUri.resolve(targetUri);
-//            System.out.println("targetUriString: " + targetUriString);
-//            System.out.println("targetUri: " + targetUri);
-//            System.out.println("resourceUri: " + resourceUri);
+            //            System.out.println("targetUriString: " + targetUriString);
+            //            System.out.println("targetUri: " + targetUri);
+            //            System.out.println("resourceUri: " + resourceUri);
             if (!targetUri.equals(resourceUri)) {
                 // maintain the UNC path
                 boolean isUncPath = nodeUri.toString().toLowerCase().startsWith("file:////");
@@ -1677,14 +1688,14 @@ public class ImdiTreeObject implements Comparable {
      * @return ImdiTreeObject
      */
     public ImdiTreeObject getParentDomNode() {
-//        System.out.println("nodeUri: " + nodeUri);
+        //        System.out.println("nodeUri: " + nodeUri);
         if (domParentImdi == null) {
             if (nodeUri.getFragment() != null) {
                 try {
                     //domParentImdi = ImdiLoader.getSingleInstance().getImdiObject(null, new URI(nodeUri.getScheme(), nodeUri.getUserInfo(), nodeUri.getHost(), nodeUri.getPort(), nodeUri.getPath(), nodeUri.getQuery(), null /* fragment removed */));
                     // the uri is created via the uri(string) constructor to prevent re-url-encoding the url
                     domParentImdi = ImdiLoader.getSingleInstance().getImdiObject(null, new URI(nodeUri.toString().split("#")[0] /* fragment removed */));
-//                    System.out.println("nodeUri: " + nodeUri);
+                    //                    System.out.println("nodeUri: " + nodeUri);
                 } catch (URISyntaxException ex) {
                     GuiHelper.linorgBugCatcher.logError(ex);
                 }
@@ -1799,7 +1810,7 @@ public class ImdiTreeObject implements Comparable {
     }
 
     public File getFile() {
-//        System.out.println("getFile: " + nodeUri.toString());
+        //        System.out.println("getFile: " + nodeUri.toString());
         if (nodeUri.getScheme().toLowerCase().equals("file")) {
             try {
                 return new File(new URI(nodeUri.toString().split("#")[0] /* fragment removed */));
@@ -1817,7 +1828,7 @@ public class ImdiTreeObject implements Comparable {
     }
 
     public void registerContainer(Object containerToAdd) {
-//        System.out.println("registerContainer: " + containerToAdd + " : " + this);
+        //        System.out.println("registerContainer: " + containerToAdd + " : " + this);
         if (!getParentDomNode().imdiDataLoaded && !isLoading()) {
             // this is the main place where the load request is made
             // TODO: this is probably not the best way to do this and might be better in a manager class
@@ -1845,7 +1856,7 @@ public class ImdiTreeObject implements Comparable {
      */
     public void removeContainer(Object containerToRemove) {
         // TODO: make sure that containers are removed when a node is removed from the tree, otherwise memory will not get freed
-//        System.out.println("de registerContainer: " + containerToRemove);
+        //        System.out.println("de registerContainer: " + containerToRemove);
         containersOfThisNode.remove(containerToRemove);
     }
 
@@ -1854,37 +1865,37 @@ public class ImdiTreeObject implements Comparable {
      * Used when loading a session dom.
      */
     public void clearChildIcons() {
-//        System.out.println("clearChildIconsParent: " + this);
+        //        System.out.println("clearChildIconsParent: " + this);
         for (ImdiTreeObject currentChild : childArray) {
-//            if (!currentChild.equals(currentChild.getParentDomNode())) {
-//                System.out.println("clearChildIcons: " + currentChild);
+            //            if (!currentChild.equals(currentChild.getParentDomNode())) {
+            //                System.out.println("clearChildIcons: " + currentChild);
             currentChild.clearChildIcons();
             currentChild.clearIcon();
-//            }
+            //            }
         }
     }
-//    public void addJumpToInTreeRequest() {
-//        jumpToRequested = true;
-//    }
+    //    public void addJumpToInTreeRequest() {
+    //        jumpToRequested = true;
+    //    }
 
     /**
      * Clears the icon calculated in "getIcon()" and notifies any UI containers of this node.
      */
     public void clearIcon() {
         refreshStringValue();
-//        System.out.println("clearIcon: " + this);
-//        System.out.println("containersOfThisNode: " + containersOfThisNode.size());
-//        SwingUtilities.invokeLater(new Runnable() {
+        //        System.out.println("clearIcon: " + this);
+        //        System.out.println("containersOfThisNode: " + containersOfThisNode.size());
+        //        SwingUtilities.invokeLater(new Runnable() {
 
-//            public void run() {
+        //            public void run() {
         icon = ImdiIcons.getSingleInstance().getIconForImdi(ImdiTreeObject.this); // to avoid a race condition (where the loading icons remains after load) this is also set here rather than nulling the icon
-//                System.out.println("clearIcon invokeLater" + ImdiTreeObject.this.toString());
-//                System.out.println("containersOfThisNode: " + containersOfThisNode.size());
+        //                System.out.println("clearIcon invokeLater" + ImdiTreeObject.this.toString());
+        //                System.out.println("containersOfThisNode: " + containersOfThisNode.size());
         // here we need to cause an update in the tree and table gui so that the new icon can be loaded
         for (Enumeration containersIterator = containersOfThisNode.elements(); containersIterator.hasMoreElements();) { // changed back to a vector due to threading issues here
             try { // TODO: the need for this try catch indicates that there is a threading issue in the way that imdichild nodes are reloaded within an imdi parent node and this should be reorganised to be more systematic and hierarchical
                 Object currentContainer = containersIterator.nextElement();
-//                    System.out.println("currentContainer: " + currentContainer.toString());
+                //                    System.out.println("currentContainer: " + currentContainer.toString());
                 if (currentContainer instanceof ImdiTableModel) {
                     ((ImdiTableModel) currentContainer).requestReloadTableData(); // this must be done because the fields have been replaced and nead to be reloaded in the tables
                 }
@@ -1898,9 +1909,9 @@ public class ImdiTreeObject implements Comparable {
                 GuiHelper.linorgBugCatcher.logError(ex);
             }
         }
-//            }
-//        });
-//        System.out.println("end clearIcon: " + this);
+        //            }
+        //        });
+        //        System.out.println("end clearIcon: " + this);
     }
 
     public void removeFromAllContainers() {
@@ -1928,9 +1939,9 @@ public class ImdiTreeObject implements Comparable {
                 GuiHelper.linorgBugCatcher.logError(ex);
             }
         }
-//            }
-//        });
-//        System.out.println("end clearIcon: " + this);
+        //            }
+        //        });
+        //        System.out.println("end clearIcon: " + this);
     }
 
     public boolean isFavorite() {
@@ -1939,13 +1950,13 @@ public class ImdiTreeObject implements Comparable {
             return false;
         }
         return LinorgSessionStorage.getSingleInstance().pathIsInFavourites(this.getFile());
-//        return getParentDomNode().isFavourite;
+        //        return getParentDomNode().isFavourite;
     }
 
-//    public void setFavouriteStatus(boolean favouriteStatus) {
-//        getParentDomNode().isFavourite = favouriteStatus;
-//        clearIcon();
-//    }
+    //    public void setFavouriteStatus(boolean favouriteStatus) {
+    //        getParentDomNode().isFavourite = favouriteStatus;
+    //        clearIcon();
+    //    }
     /**
      * If not already done calculates the required icon for this node in its current state.
      * Once calculated the stored icon will be returned.
